fixed practice div on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -129,19 +129,17 @@ div#endOfGameOptions button {
 .practice {
     position: absolute;
     left: 518px;
-    text-wrap: nowrap;
-    width: 50%;
-    height: 100%;
-    border: 2px red dashed;
-    display: flex;
-    flex-direction: column;
+    width: max-content;
+    display: grid;
+    grid-template-columns: repeat(3, 130px);
+    grid-template-rows: repeat(2, 50px);
     align-items: center;
-    top: 50%;
+    top: 102%;
     transform: translateY(-50%);
 }
 
 .practice * {
-    margin: 0.5rem;
+    margin: 0 auto;
 }
 
 .manualShipPlaceholders {
@@ -154,10 +152,35 @@ div#endOfGameOptions button {
 
 button.refreshButton {
     margin-top: auto;
+    position: absolute;
     border: 2px solid black;
-    padding: 8px 15px;
+    top: 150%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 6px 12px;
     border-radius: 45%;
-    font-size: 20px;
+    font-size: 16px;
+}
+img.length2Ship.manualShipPlaceholders {
+    grid-column: 1;
+    grid-row: 1;
+}
+img.length3Ship.manualShipPlaceholders {
+    grid-column: 2;
+    grid-row: 1;
+}
+.length3Ship.manualShipPlaceholders:nth-child(2) {
+    grid-column: 3;
+    grid-row: 1;
+}
+img.length4Ship.manualShipPlaceholders {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+img.length5Ship.manualShipPlaceholders {
+    grid-column: 3;
+    grid-row: 2;
 }
 
 @media (max-width: 1084px) {
@@ -196,6 +219,7 @@ button.refreshButton {
     }
 
     .practice {
-        left: 368px;
+        left: 50%;
+        transform: translateX(-50%);
     }
 }
